--- a/styles/styles.css
+++ b/styles/styles.css
@@ -79,7 +79,7 @@ header {
     top: 0;
     right: 0;
     transition: all .5s ease-in-out;
-    box-shadow: 0 10px 10px rgba(38, 38, 38, 0.3);
+    box-shadow: 2px 13px 50px 0px rgba(38,38,38,1);
     z-index: 1000;
 }
 
@@ -88,7 +88,7 @@ header {
     justify-content: flex-start;
     align-items: center;
     text-transform: capitalize;
-    margin-left: -140px;
+    margin-left: -145px;
     cursor: default;
 }
 
@@ -166,8 +166,7 @@ header {
 /* Slider CSS */
 
 .slider {
-    height: 100vh;
-    margin-top: 60px;
+    height: 130vh;
     position: relative;
 }
 
@@ -301,7 +300,7 @@ header {
     width: 100%;
     max-width: 100%;
     height: 250px;
-    bottom: -320px;
+    bottom: -370px;
     box-sizing: border-box;
     overflow: auto;
     transform: translateX(0%);
